DFR-2813-Update miam fields